# AI20kekeke

./: .env.example  .gitattributes  .gitignore  .mcp.json  .npmrc  .pre-commit-config.yaml  .semgrepignore  AI_LOG.md  CLAUDE.md  Dockerfile  FINAL_AUDIT_REPORT.md  JOURNAL.md  KNOWN_LIMITATIONS.md  Makefile  NAM-JOURNAL.md  OLD_TEMPLATE_REMOVAL_MANIFEST.md  PROJECT-CONTEXT.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  RESET_REPORT.md  SPECIFY.md  SUPABASE_FIX.md  TRONG-JOURNEY.md  WORKLOG.md  docker-compose.yml  elo-counter-animation.md  giai_phap_adaptive_tutor_toi_uu.md  llms-full.txt  llms.txt  math6-dag-relations.md  project_evaluation.md  pyproject.toml  render.yaml  requirements.txt  ruff.toml  run_demo.ps1  skills-lock.json
.ai-log/: .git_cache.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.specify/: feature.json
ADR/: adr-001-setup-adr.md  adr-002-mastery-algorithm-selection.md  adr-003-contextual-bandit-selection.md  adr-003-pdf-converter-openrouter-fallback.md  adr-003-tutor-brain-spec.md  adr-004-practice-session-data-strategy.md  adr-004-question-elo-concurrency-locking.md  adr-004-rag-supabase-pgvector.md  adr-005-chatbot-personalization-architecture.md  adr-006-chatbot-agent-and-quiz-generation.md  adr-007-hybrid-smart-cache-tool-calling.md  adr-008-guardrails-logging-fallback-architecture.md  adr-009-course-knowledge-graph-construction-graphusion.md  adr-009-ingest-pdf-slide-images-supabase-storage.md  adr-010-personalized-semantic-cache.md  adr-011-catch-all-bff-proxy-routing.md  adr-011-multi-skill-forgetting-curve.md  adr-012-mssv-based-authentication.md  adr-013-gated-cicd-pipeline.md  adr-014-bitemporal-graph-memory-storage.md  adr-015-question-bank-adaptive-onboarding-prior.md  template.md  (+1 more)
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: __init__.py
backend/src/api/: files.py  health.py  main.py  runs.py
backend/src/capabilities/: example_transform.py  registry.py
backend/src/core/: config.py  data_loader.py  errors.py  evaluation.py  http_client.py  logging.py  module.py  modules_config.json  provider.py  run_manager.py
backend/src/llm/: base.py  stub_provider.py
backend/src/models/: requests.py  responses.py  sources.py
backend/src/modules/agent/: README.md  capability.py  module.json
backend/src/modules/analytics/: README.md  capability.py  module.json
backend/src/modules/computer_vision/: README.md  capability.py  module.json
backend/src/modules/example_transform/: capability.py  module.json
backend/src/modules/optimization/: README.md  capability.py  module.json
backend/src/modules/prediction/: README.md  capability.py  module.json
backend/src/modules/rag/: README.md  capability.py  index.py  module.json  ocr.py  pdf_ingest.py
backend/src/services/: run_service.py
backend/src/storage/: local.py
backend/src/tools/: base.py  mock_tools.py  registry.py
backend/tests/: conftest.py  test_api.py  test_challenge_init.py  test_frontend_configuration.py  test_modules.py  test_project_tasks.py  test_rag_capability.py  test_services.py  test_smoke.py
(+2619 files in other folders)
