[project]
name = "vaic-universal-starter-backend"
version = "0.1.0"
description = "VAIC Universal Starter — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
# OCR pipeline (scripts/ingest_pdfs.py). Kept separate from `dev` because it pulls in
# PyMuPDF/Pillow and requires a system Tesseract binary + Vietnamese language pack to
# actually OCR anything — see docs/engineering/ocr-pipeline.md. The `rag` capability's
# indexing/query path (src/modules/rag/index.py, chunking.py) is stdlib-only and does
# NOT need this group.
rag-ocr = [
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
